@@ -26,9 +26,13 @@
 #include "apr_file_io.h"
 #include "apr_errno.h"
 #include "apr_inherit.h" 
+#include "apr_perms_set.h"
 
 #if APR_HAVE_NETINET_IN_H
 #include <netinet/in.h>
+#endif
+#if APR_HAVE_SYS_UN_H
+#include <sys/un.h>
 #endif
 
 #ifdef __cplusplus
@@ -156,6 +160,25 @@ struct in_addr {
 #define APR_INET6    AF_INET6
 #endif
 
+#if APR_HAVE_SOCKADDR_UN
+#if defined (AF_UNIX)
+#define APR_UNIX    AF_UNIX
+#elif defined(AF_LOCAL)
+#define APR_UNIX    AF_LOCAL
+#else
+#error "Neither AF_UNIX nor AF_LOCAL is defined"
+#endif
+#else /* !APR_HAVE_SOCKADDR_UN */
+#if defined (AF_UNIX)
+#define APR_UNIX    AF_UNIX
+#elif defined(AF_LOCAL)
+#define APR_UNIX    AF_LOCAL
+#else
+/* TODO: Use a smarter way to detect unique APR_UNIX value */
+#define APR_UNIX    1234
+#endif
+#endif
+
 /**
  * @defgroup IP_Proto IP Protocol Definitions for use when creating sockets
  * @{
@@ -246,6 +269,10 @@ struct apr_sockaddr_t {
         /** Placeholder to ensure that the size of this union is not
          * dependent on whether APR_HAVE_IPV6 is defined. */
         struct sockaddr_storage sas;
+#endif
+#if APR_HAVE_SOCKADDR_UN
+        /** Unix domain socket sockaddr structure */
+        struct sockaddr_un unx;
 #endif
     } sa;
 };
@@ -375,6 +402,7 @@ APR_DECLARE(apr_status_t) apr_socket_atreadeof(apr_socket_t *sock,
  * @param sa The new apr_sockaddr_t.
  * @param hostname The hostname or numeric address string to resolve/parse, or
  *               NULL to build an address that corresponds to 0.0.0.0 or ::
+ *               or in case of APR_UNIX family it is absolute socket filename.
  * @param family The address family to use, or APR_UNSPEC if the system should 
  *               decide.
  * @param port The port number.
@@ -805,6 +833,11 @@ APR_DECLARE_INHERIT_SET(socket);
  * Unset a socket from being inherited by child processes.
  */
 APR_DECLARE_INHERIT_UNSET(socket);
+
+/**
+ * Set socket permissions.
+ */
+APR_PERMS_SET_IMPLEMENT(global_mutex);
 
 /**
  * @defgroup apr_mcast IP Multicast
