@@ -26,10 +26,15 @@
 #define APR_WANT_BYTEFUNC
 #include "apr_want.h"
 
+#define UNIX_SOCKET_NAME    "/tmp/apr-socket"
+#define IPV4_SOCKET_NAME    "127.0.0.1"
+static char *socket_name = NULL;
+static int   socket_type = APR_INET;
+
 static void launch_child(abts_case *tc, apr_proc_t *proc, const char *arg1, apr_pool_t *p)
 {
     apr_procattr_t *procattr;
-    const char *args[3];
+    const char *args[4];
     apr_status_t rv;
 
     rv = apr_procattr_create(&procattr, p);
@@ -47,7 +52,8 @@ static void launch_child(abts_case *tc, apr_proc_t *proc, const char *arg1, apr_
 
     args[0] = "sockchild" EXTENSION;
     args[1] = arg1;
-    args[2] = NULL;
+    args[2] = socket_name;
+    args[3] = NULL;
     rv = apr_proc_create(proc, TESTBINPATH "sockchild" EXTENSION, args, NULL,
                          procattr, p);
     APR_ASSERT_SUCCESS(tc, "Couldn't launch program", rv);
@@ -117,7 +123,7 @@ static apr_socket_t *setup_socket(abts_case *tc)
     apr_sockaddr_t *sa;
     apr_socket_t *sock;
 
-    rv = apr_sockaddr_info_get(&sa, "127.0.0.1", APR_INET, 8021, 0, p);
+    rv = apr_sockaddr_info_get(&sa, socket_name, socket_type, 8021, 0, p);
     APR_ASSERT_SUCCESS(tc, "Problem generating sockaddr", rv);
 
     rv = apr_socket_create(&sock, sa->family, SOCK_STREAM, APR_PROTO_TCP, p);
@@ -491,7 +497,7 @@ static void test_nonblock_inheritance(abts_case *tc, void *data)
 abts_suite *testsock(abts_suite *suite)
 {
     suite = ADD_SUITE(suite)
-
+    socket_name = IPV4_SOCKET_NAME;
     abts_run_test(suite, test_addr_info, NULL);
     abts_run_test(suite, test_serv_by_name, NULL);
     abts_run_test(suite, test_create_bind_listen, NULL);
@@ -503,6 +509,14 @@ abts_suite *testsock(abts_suite *suite)
     abts_run_test(suite, test_get_addr, NULL);
     abts_run_test(suite, test_nonblock_inheritance, NULL);
 
+#if APR_HAVE_SOCKADDR_UN
+    socket_name = UNIX_SOCKET_NAME;
+    socket_type = APR_UNIX;
+    abts_run_test(suite, test_create_bind_listen, NULL);
+    abts_run_test(suite, test_send, NULL);
+    abts_run_test(suite, test_recv, NULL);
+    abts_run_test(suite, test_timeout, NULL);
+#endif
     return suite;
 }
 
